objects/Business_Code__c.object
<CustomObject>
    <description>The master table which maintain the Business code and description. This table will apply for Call Pan and Call Report&apos;s record.</description>
    <fields>
        <fullName>Business_Code_Description__c</fullName>
        <label>Business Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Industry_Group_Description__c</fullName>
        <label>Sub Industry Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry_Group__c</fullName>
        <label>Sub Industry Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X26_Industries_Group__c</fullName>
        <label>26 Industries Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Code_Description__c</columns>
        <columns>External_ID__c</columns>
        <columns>Sub_Industry_Group__c</columns>
        <columns>Sub_Industry_Group_Description__c</columns>
        <columns>X26_Industries_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Business Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>